[package]
name = "esp-scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

chrono = {version = "0.4.33", features = ["serde"]}
clap = { version = "4.5.0", features = ["derive"] }
reqwest = "0.11.24"
serde = {version ="1.0.196", features = ["derive"]}
serde_json = "1.0.113"
serde_yaml = "0.9.31"
tokio = { version= "1.35.1", features = ["full"]}
